<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spare_parts_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_bottom_table_header"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:text="@string/subop_table_material" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/subop_table_plant" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:text="@string/subop_table_stock" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/subop_table_quantities" />

    </TableRow>



</TableLayout>