<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.OrderDetailsFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_work_order_type"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_wo_type"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/details_work_order_text"
            android:textAlignment="gravity" />

        <TextView
            android:id="@+id/order_detail_text"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_location"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_location"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textView15"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/details_job_type"
            android:textAlignment="gravity" />
        <TextView
            android:id="@+id/order_detail_job_type"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_planning_plant"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_planning_plant"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_sales_order"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_sales_order"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_workcenter_plant"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_workcenter_plant"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_mwc"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_workcenter_main"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_main_work_center"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_employee_responsible"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_employee_responsible"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/details_so_partner"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/order_detail_so_partner"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
</layout>