<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_expand_equipment_info"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/voice_use_description"
            app:icon="@drawable/ic_chevron_right_black_24dp" />

        <TextView
            android:id="@+id/equipment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/equipment_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView53"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="8dp"
                android:text="@string/equipment_title" />

            <TextView
                android:id="@+id/equipment_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:paddingStart="30dp"
                android:text="@string/equipment_details"
                android:textColor="@color/blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="8dp"
                android:text="@string/equipment_material" />

            <TextView
                android:id="@+id/equipment_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="8dp"
                android:text="@string/equipment_serial_no" />

            <TextView
                android:id="@+id/equipment_serial_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="8dp"
                android:text="@string/equipment_location" />

            <TextView
                android:id="@+id/equipment_func_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:text="TextView" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>